gccida/g0/fixup_reorder_chain
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_reorder_chain/src/cfglayout.c:928:22: error: use of undeclared identifier 'unk_74FB08'
v2 = ( const char *)&unk_74FB08; 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_reorder_chain/src/obj/cfglayout.o] Error 1
